--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,12 @@
 body{
 	font-family: "Helvetica Neue", helvetica, arial, sans-serif;
+  background: url("../img/redpicnic.jpg");
+}
+
+h1{
+  font-family: 'Rock Salt', cursive;
+  color: white;
+
 }
 
 .container{
@@ -7,12 +14,41 @@ body{
 }
 
 ul{
-	padding: 5px;
+	padding: 5px 20px;
 	list-style: none;
 }
 
-li{
-	text-align: left;
-	margin: 5px 0;
+ul span{
 	cursor: pointer;
+  font-weight: bold;
+}
+
+li{
+  text-align: left;
+  margin: 5px 0;
+}
+
+h1{
+  font-size: 50px;
+  margin-top: 60px;
+}
+
+input{
+  margin: 10px 10px;
+  height: 20px;
+}
+
+.searchBox{
+  background-color: rgba(255,255,255,0.7);
+  border: 4px solid white;
+}
+
+#zipcode {
+  -webkit-border-radius: 2em;
+  -moz-border-radius: 2em;
+  -ms-border-radius: 2em;
+  -o-border-radius: 2em;
+  border-radius: 2em;
+  padding: 0.5em 1em;
+  width: 300px;
 }
