--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,11 @@ ul{
 ul span{
 	cursor: pointer;
   font-weight: bold;
+  font-size: 18px;
+}
+
+ul span:hover{
+  color: red;
 }
 
 li{
@@ -37,6 +42,11 @@ h1{
 input{
   margin: 10px 10px;
   height: 20px;
+}
+
+.info{
+  font-size: 14px;
+  line-height: 25px;
 }
 
 .searchBox{
