--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,10 @@ body{
 
 h1{
   font-family: 'Rock Salt', cursive;
-  text-shadow: 0 1px 1px #000;
+  text-shadow: 0 1px 2px #000;
   color: white;
-
+  font-size: 50px;
+  margin-top: 20px;
 }
 
 .container{
@@ -34,13 +35,8 @@ li{
   margin: 5px 0;
 }
 
-h1{
-  font-size: 50px;
-  margin-top: 60px;
-}
-
 input{
-  margin: 10px 10px;
+  margin: 0 10px 20px 0;
   height: 20px;
 }
 
@@ -65,6 +61,6 @@ input{
 }
 
 iframe{
-  width: 480px;
+  width: 100%;
   height: 200px;
 }
