--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 body{
 	font-family: "Helvetica Neue", helvetica, arial, sans-serif;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0.1)), color-stop(100%, rgba(255, 255, 255, 0.1))), url("../img/redpicnic.jpg") repeat 0 0;
+  /*background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0.1)), color-stop(100%, rgba(255, 255, 255, 0.1))), url("../img/redpicnic.jpg") repeat 0 0;*/
+  background: url("../img/greengrass.jpg");
+  background-repeat: repeat;
 }
 
 h1{
@@ -23,11 +25,11 @@ ul{
 ul span{
 	cursor: pointer;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 20px;
 }
 
 ul span:hover{
-  color: red;
+  color: #008e00;
 }
 
 li{
@@ -38,6 +40,7 @@ li{
 input{
   margin: 0 10px 20px 0;
   height: 20px;
+  background-color: white;
 }
 
 .info{
@@ -46,7 +49,8 @@ input{
 }
 
 .searchBox{
-  background-color: rgba(255,255,255,0.7);
+  /*background-color: rgba(255,255,255,0.7);*/
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0.7)), color-stop(100%, rgba(255, 255, 255, 0.7))), url("../img/redpicnic.jpg") repeat 0 0;
   border: 4px solid white;
 }
 
