--- a/css/style.css
+++ b/css/style.css
@@ -75,3 +75,15 @@ iframe{
   width: 100%;
   height: 200px;
 }
+
+footer{
+  position: absolute;
+  bottom: 5px;
+  left: 10px;
+}
+
+footer a{
+  font-size: 12px;
+  color: white;
+  text-decoration: none;
+}
